# ihp-forum

./: .envrc  App.cabal  Main.hs  Makefile  README.md  default.nix  flake.nix  hie.yaml
.github/workflows/: ci.yml
Admin/: FrontController.hs  Routes.hs  Types.hs
Admin/Controller/: Admins.hs  Sessions.hs  UserBadges.hs
Admin/View/: Context.hs  Layout.hs  Prelude.hs
Admin/View/Admins/: Edit.hs  Index.hs  New.hs  Show.hs
Admin/View/Sessions/: New.hs
Admin/View/UserBadges/: Edit.hs  Index.hs  New.hs  Show.hs
Application/: Fixtures.sql  Schema.sql
Application/Helper/: Controller.hs  TypeInstances.hs  View.hs
Config/: Config.hs
Web/: FrontController.hs  Routes.hs  Types.hs
Web/Controller/: Comments.hs  Prelude.hs  Sessions.hs  Threads.hs  Topics.hs  Users.hs
Web/Mail/Comments/: NewCommentNotification.hs
Web/View/: Context.hs  Layout.hs
Web/View/Comments/: Edit.hs  Index.hs  New.hs  Show.hs
Web/View/Sessions/: New.hs
Web/View/Threads/: Edit.hs  Index.hs  New.hs  Show.hs
Web/View/Topics/: Edit.hs  Index.hs  New.hs  Show.hs
Web/View/Users/: Edit.hs  Index.hs  New.hs  Show.hs
static/: app.css  footer.css
