-- This file is only a stub file, please see flake.nix for adding dependencies.
--
-- Learn more about dependency management in IHP: https://ihp.digitallyinduced.com/Guide/package-management.html
--

name:                App
version:             0.1.0.0
license:             AllRightsReserved
license-file:        LICENSE
author:              Marc Scholten
maintainer:          marc@digitallyinduced.com
build-type:          Simple
cabal-version:       >=1.10

executable App
  main-is:             Main.hs
  build-depends:
  	ihp,
  	ihp-mail,
  	base,
  	wai,
    text,
    mmark,
    mmark-ext,
    wreq,
    neat-interpolation
  hs-source-dirs:      .
  default-language:    Haskell2010
  extensions:
    OverloadedStrings
    , NoImplicitPrelude
    , ImplicitParams
    , Rank2Types
    , DisambiguateRecordFields
    , NamedFieldPuns
    , DuplicateRecordFields
    , OverloadedLabels
    , FlexibleContexts
    , TypeSynonymInstances
    , FlexibleInstances
    , QuasiQuotes
    , TypeFamilies
    , PackageImports
    , ScopedTypeVariables
    , RecordWildCards
    , TypeApplications
    , DataKinds
    , InstanceSigs
    , DeriveGeneric
    , MultiParamTypeClasses
    , TypeOperators
    , DeriveDataTypeable
    , MultiWayIf
    , UndecidableInstances
    , BlockArguments
    , PartialTypeSignatures
    , LambdaCase
    , DefaultSignatures
    , EmptyDataDeriving
    , BangPatterns
    , FunctionalDependencies
    , StandaloneDeriving
    , DerivingVia
